--- a/Balancing_Robot_MiniProject/MDK-ARM/Balancing_Robot_MiniProject/Balancing_Robot_MiniProject.build_log.htm
+++ b/Balancing_Robot_MiniProject/MDK-ARM/Balancing_Robot_MiniProject/Balancing_Robot_MiniProject.build_log.htm
@@ -27,6 +27,10 @@ Project File Date:  04/04/2024
 <h2>Output:</h2>
 *** Using Compiler 'V6.21', folder: 'C:\Keil_v5\ARM\ARMCLANG\Bin'
 Build target 'Balancing_Robot_MiniProject'
+compiling motor.c...
+linking...
+Program Size: Code=5386 RO-data=274 RW-data=16 ZI-data=1664  
+FromELF: creating hex file...
 "Balancing_Robot_MiniProject\Balancing_Robot_MiniProject.axf" - 0 Error(s), 0 Warning(s).
 
 <h2>Software Packages used:</h2>
